test/fail/basic_syntax/multi_char_byte_literal.lily
#[
SyntaxError: Multi-character byte literal.
    from multi_char_byte_literal.lily:6:
]#

var v = '12'
